--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ autopep8==1.5.4
 backcall==0.2.0
 certifi==2020.12.5
 click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
+cloudpickle==1.6.0
 colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
