--- a/requirements.txt
+++ b/requirements.txt
@@ -14,30 +14,29 @@ itsdangerous==1.1.0
 jedi==0.17.0
 Jinja2==2.11.3
 joblib==1.0.1
-jupyter-client==6.1.11
-jupyter-core==4.7.0
+jupyter-client==6.1.7
+jupyter-core==4.7.1
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 numpy==1.20.1
 pandas==1.2.2
-parso @ file:///tmp/build/80754af9/parso_1607623074025/work
-pickleshare==0.7.5
+parso==0.8.1
 Pillow==8.1.1
-prompt-toolkit==3.0.10
+prompt-toolkit==3.0.8
 pycodestyle==2.6.0
-Pygments==2.7.4
+Pygments==2.8.0
 pyparsing==2.4.7
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+python-dateutil==2.8.1
 pytz==2021.1
 pywin32==300
-pyzmq==21.0.1
+pyzmq==21.0.0
 scikit-learn==0.24.1
 scipy==1.6.1
 seaborn==0.11.1
-six @ file:///C:/ci/six_1605187374963/work
+six==1.15.0
 sklearn==0.0
-spyder-kernels @ file:///C:/ci/spyder-kernels_1614030842607/work
+spyder-kernels=1.10.2
 threadpoolctl==2.1.0
 toml==0.10.2
 tornado==6.1
