--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ scipy==1.6.1
 seaborn==0.11.1
 six==1.15.0
 sklearn==0.0
-spyder-kernels=1.10.2
+spyder-kernels==1.10.2
 threadpoolctl==2.1.0
 toml==0.10.2
 tornado==6.1
