--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
 Flask==1.1.2
+gunicorn==20.0.4
 ipykernel==5.4.3
 ipython==7.16.1
 ipython-genutils==0.2.0
